chore: update docker-compose.yaml: mongoose added

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,6 +126,16 @@ services:
     volumes:
       - ./auth-microservice:/app
       - /app/node_modules
+
+  mongo:
+    image: mongo
+    container_name: mongo-db
+    ports:
+      - "27017:27017"
+    networks:
+      - commerce-network
+    volumes:
+      - mongo-data:/data/db
   api-gateway:
     build:
       context: ./api-gateway
@@ -151,3 +161,4 @@ volumes:
   pgadmin:
   products-pg-db:
   orders-pg-db:
+  mongo-data:
