chore: update docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,6 +126,17 @@ services:
     volumes:
       - ./auth-microservice:/app
       - /app/node_modules
+  cart-microservice:
+    build:
+      context: ./cart-microservice
+      dockerfile: Dockerfile
+    depends_on:
+      - mongo
+    networks:
+      - aye-network
+    volumes:
+      - ./cart-microservice:/app
+      - /app/node_modules
 
   mongo:
     image: mongo
