chore: update .env

--- a/.env
+++ b/.env
@@ -9,3 +9,16 @@
  USERS_PORT=3020
  USERS_HOST=0.0.0.0
  TYPEORM_CACHE_DURATION=60
+
+ PRODUCTS_POSTGRES_HOST=products-pg-db
+ PRODUCTS_POSTGRES_PORT=5432
+ PRODUCTS_POSTGRES_DB=ayecommercedb-products
+ PRODUCTS_POSTGRES_USER=postgres
+ PRODUCTS_POSTGRES_PASSWORD=ruveyda32
+
+
+ ORDERS_POSTGRES_HOST=orders-pg-db
+ ORDERS_POSTGRES_PORT=5432
+ ORDERS_POSTGRES_DB=ayecommercedb-orders
+ ORDERS_POSTGRES_USER=postgres
+ ORDERS_POSTGRES_PASSWORD=ruveyda32
