update package.json and tsconfig.json: @my/common added

--- a/api-gateway/tsconfig.json
+++ b/api-gateway/tsconfig.json
@@ -10,6 +10,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@my/common": ["../common/dist"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
