--- a/libs/package.json
+++ b/libs/package.json
@@ -22,5 +22,10 @@
   "devDependencies": {
     "@types/node": "^22.15.21",
     "standard-version": "^9.5.0"
+  },
+  "dependencies": {
+    "@nestjs/mapped-types": "^2.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2"
   }
 }
