--- a/libs/package.json
+++ b/libs/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2"
+    "class-validator": "^0.14.2",
+    "typeorm": "^0.3.24"
   }
 }
