create 5 files and update 12 files

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:20-alpine
 
 WORKDIR /usr/src/app/api-gateway
-COPY ./api-gateway/package*.json ./
+
+# Burada artık sadece '.' içindeki dosyaları alıyoruz çünkü context ./api-gateway
+COPY package*.json ./
 
 RUN npm install
 
-COPY ./api-gateway ./
+COPY . .
 
 CMD ["npm", "run", "start:dev"]
