--- a/libs/tsconfig.json
+++ b/libs/tsconfig.json
@@ -1,10 +1,12 @@
 {
-  
   "compilerOptions": {
     "composite": true,
     "outDir": "./dist", // derleme dist folderına çıktı verir
     "rootDir": "./src", // src altı derlenir
     "baseUrl": "./src",
+    "paths": {
+      "@my/common": ["./src"]
+    },
     "module": "commonjs",
     "target": "ES2020",
     "esModuleInterop": true,
