--- a/orders-microservice/Dockerfile
+++ b/orders-microservice/Dockerfile
@@ -1,11 +1,12 @@
 FROM node:20-alpine
 
-WORKDIR /app
+WORKDIR /usr/src/app/orders-microservice
 
-COPY  package*.json ./
+# Burada artık sadece '.' içindeki dosyaları alıyoruz çünkü context ./orders-microservice
+COPY package*.json ./
 
 RUN npm install
 
 COPY . .
 
-CMD [ "npm","run","start:dev" ]
+CMD ["npm", "run", "start:dev"]
