--- a/orders-microservice/package.json
+++ b/orders-microservice/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "file": "^0.2.2",
+    "kafkajs": "^2.2.4",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
