--- a/shipping-service/tsconfig.json
+++ b/shipping-service/tsconfig.json
@@ -16,6 +16,10 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+     "paths": {
+      "@my/common": ["../libs/dist"],
+      "@my/common/*": ["../libs/dist/*"]
+    }
   }
 }
