--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,8 +76,10 @@ services:
       USERS_POSTGRES_DB: ${USERS_POSTGRES_DB}
       TYPEORM_CACHE_DURATION: ${TYPEORM_CACHE_DURATION}
     volumes:
-      - ./users-microservice:/app
-      - /app/node_modules
+      - ./users-microservice:/usr/src/app/users-microservice
+      - /usr/src/app/users-microservice/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
   products-microservice:
     build:
       context: ./products-microservice
@@ -86,7 +88,9 @@ services:
       - products-pg-db
     networks:
       - aye-network
-    environment:
+    environment:      
+      KAFKA_HOST: ${KAFKA_HOST}
+      KAFKA_PORT: ${KAFKA_PORT}
       PRODUCTS_POSTGRES_HOST: ${PRODUCTS_POSTGRES_HOST}
       PRODUCTS_POSTGRES_PORT: ${PRODUCTS_POSTGRES_PORT}
       PRODUCTS_POSTGRES_USER: ${PRODUCTS_POSTGRES_USER}
@@ -94,8 +98,10 @@ services:
       PRODUCTS_POSTGRES_DB: ${PRODUCTS_POSTGRES_DB}
       TYPEORM_CACHE_DURATION: ${TYPEORM_CACHE_DURATION}
     volumes:
-      - ./products-microservice:/app
-      - /app/node_modules
+      - ./products-microservice:/usr/src/app/products-microservice
+      - /usr/src/app/products-microservice/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
   orders-microservice:
     build:
       context: ./orders-microservice
@@ -114,6 +120,8 @@ services:
     volumes:
       - ./products-microservice:/app
       - /app/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
   auth-microservice:
     build:
       context: ./auth-microservice
@@ -121,11 +129,16 @@ services:
     depends_on:
       - users-pg-db
       - users-microservice
+      - my-common
+    environment:
+      NODE_PATH: /usr/src/app=value
     networks:
       - aye-network
     volumes:
-      - ./auth-microservice:/app
-      - /app/node_modules
+      - ./auth-microservice:/usr/src/app/auth-microservice
+      - /usr/src/app/auth-microservice/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
   cart-microservice:
     build:
       context: ./cart-microservice
@@ -147,6 +160,14 @@ services:
       - aye-network
     volumes:
       - mongo-data:/data/db
+
+  my-common:
+    build:
+      context: ./libs
+      dockerfile: Dockerfile
+    volumes:
+      - my-common-dist:/usr/src/app/dist # bu volume sayesinde diğer uygulamlarla paylaşabileceğiz
+      - my-common-modules:/usr/src/app/node_modules
   api-gateway:
     build:
       context: ./api-gateway
@@ -159,12 +180,102 @@ services:
       - users-microservice
       - auth-microservice
       - products-microservice
-      - cart-microservice
-      - orders-microservice
+      - my-common
+    env_file:
+      - .env
+      # - orders-microservice
+    environment:
+      NODE_PATH: /usr/src/app=value
     volumes:
-      - ./api-gateway:/app
-      - /app/node_modules
+      - /usr/src/app/api-gateway/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
+    restart: unless-stopped
 
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+    networks:
+      - aye-network
+
+
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    container_name: zookeeper
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+      - ALLOW_ANONYMOUS_LOGIN=yes
+    ports:
+      - "2181:2181"
+    networks:
+      - aye-network
+    healthcheck:
+      test: ["CMD", "echo", "ruok", "|", "nc", "localhost", "2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  notification-microservice:
+    build:
+      context: .
+      dockerfile: ./notifications-microservice/Dockerfile
+    depends_on:
+      - kafka
+    networks:
+      - aye-network
+    environment:
+      KAFKA_HOST: ${KAFKA_HOST}
+      KAFKA_PORT: ${KAFKA_PORT}
+    volumes:
+      - ./notifications-microservice:/usr/src/app/notifications-microservice
+      - /usr/src/app/notifications-microservice/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
+  shipping-microservice:
+    build:
+      context: .
+      dockerfile: ./shipping-microservice/Dockerfile
+    depends_on:
+      - kafka
+    networks:
+      - aye-network
+    environment:
+      KAFKA_HOST: ${KAFKA_HOST}
+      KAFKA_PORT: ${KAFKA_PORT}
+    volumes:
+      - ./shipping-microservice:/usr/src/app/shipping-microservice
+      - /usr/src/app/shipping-microservice/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
+
+  stock-microservice:
+    build:
+      context: .
+      dockerfile: ./stock-microservice/Dockerfile
+    depends_on:
+      - kafka
+    networks:
+      - aye-network
+    environment:
+      KAFKA_HOST: ${KAFKA_HOST}
+      KAFKA_PORT: ${KAFKA_PORT}
+    volumes:
+      - ./stock-microservice:/usr/src/app/stock-microservice
+      - /usr/src/app/stock-microservice/node_modules
+      - ./libs/dist:/usr/src/app/libs/dist
+      - ./libs/node_modules:/usr/src/app/libs/node_modules
 networks:
   aye-network:
     driver: bridge
@@ -173,5 +284,7 @@ volumes:
   users-pg-db:
   pgadmin:
   products-pg-db:
+  my-common-dist:
+  my-common-modules:
   orders-pg-db:
-  mongo-data:
+  # mongo-data:
