--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -31,10 +31,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "file": "^0.2.2",
+    "nest-winston": "^1.10.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.23"
+    "typeorm": "^0.3.23",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
