--- a/cart-microservice/package.json
+++ b/cart-microservice/package.json
@@ -32,8 +32,10 @@
     "class-validator": "^0.14.2",
     "file": "^0.2.2",
     "mongoose": "^8.15.0",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
