--- a/orders-microservice/package.json
+++ b/orders-microservice/package.json
@@ -32,10 +32,12 @@
     "class-validator": "^0.14.2",
     "file": "^0.2.2",
     "kafkajs": "^2.2.4",
+    "nest-winston": "^1.10.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
