--- a/products-microservice/package.json
+++ b/products-microservice/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/elasticsearch": "^11.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.1.1",
     "@nestjs/platform-express": "^11.0.1",
@@ -31,8 +32,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "file": "^0.2.2",
+    "install": "^0.13.0",
     "kafkajs": "^2.2.4",
     "nest-winston": "^1.10.2",
+    "npm": "^11.4.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
