--- a/.env
+++ b/.env
@@ -22,3 +22,8 @@
  ORDERS_POSTGRES_DB=ayecommercedb-orders
  ORDERS_POSTGRES_USER=postgres
  ORDERS_POSTGRES_PASSWORD=ruveyda32
+
+
+
+ KAFKA_HOST=kafka
+ KAFKA_PORT=9092
