chore: update .env

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
  USERS_POSTGRES_PORT=5432
  USERS_POSTGRES_DB=ayecommercedb
  USERS_POSTGRES_USER=postgres
- USERS_POSTGRES_PASSWORD=ruveyda32
+ USERS_POSTGRES_PASSWORD=*******
  PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
  PGADMIN_DEFAULT_PASSWORD=admin
  PGADMIN_PORT=5050
@@ -14,14 +14,14 @@
  PRODUCTS_POSTGRES_PORT=5432
  PRODUCTS_POSTGRES_DB=ayecommercedb-products
  PRODUCTS_POSTGRES_USER=postgres
- PRODUCTS_POSTGRES_PASSWORD=ruveyda32
+ PRODUCTS_POSTGRES_PASSWORD=********
 
 
  ORDERS_POSTGRES_HOST=orders-pg-db
  ORDERS_POSTGRES_PORT=5432
  ORDERS_POSTGRES_DB=ayecommercedb-orders
  ORDERS_POSTGRES_USER=postgres
- ORDERS_POSTGRES_PASSWORD=ruveyda32
+ ORDERS_POSTGRES_PASSWORD=******
 
 
 
